[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
categories = [
    "command-line-utilities",
    "development-tools",
]
description = "A adb logcat wrapper and log processor"
homepage = "https://github.com/flxo/rogcat"
keywords = [
    "android",
    "adb",
    "debugging",
    "log",
    "logcat",
]
license = "MIT"
name = "rogcat"
readme = "README.md"
repository = "https://github.com/flxo/rogcat"
version = "0.3.0-alpha.0"
edition = "2018"

[dependencies]
atty = "0.2.11"
bytes = "0.4.11"
clap = "2.32.0"
config = "0.9.1"
crc = "1.8.1"
csv = "1.0.2"
directories = "1.0.2"
failure = "0.1.3"
futures = "0.1.25"
handlebars = "1.1.0"
indicatif = "0.10.1"
lazy_static = "1.2.0"
nom = "4.1.1"
regex = "1.1.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
term_size = "0.3.1"
time = "0.1.40"
tokio = "0.1.13"
tokio-process = "0.2.3"
tokio-serial = "3.1.0"
toml = "0.4.9"
url = "1.7.2"
which = "2.0.1"
zip = "0.5.0"
termcolor = "1.0.4"

[dev-dependencies]
rand = "0.6.1"
tempdir = "0.3.7"

[features]
default = []
