[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
categories = [
    "command-line-utilities",
    "development-tools",
]
description = "A adb logcat wrapper and log processor"
homepage = "https://github.com/flxo/rogcat"
keywords = [
    "android",
    "adb",
    "debugging",
    "log",
    "logcat",
]
license = "MIT"
name = "rogcat"
readme = "README.md"
repository = "https://github.com/flxo/rogcat"
version = "0.4.2-alpha.0"
edition = "2018"

[lib]
name = "rogcat"
path = "src/lib.rs"

[[bin]]
name = "rogcat"
path = "src/main.rs"

[dependencies]
atty = "0.2.11"
bytes = "0.4.12"
clap = "2.33.0"
config = "0.9.3"
crc = "1.8.1"
csv = "1.0.7"
directories = "1.0.2"
failure = "0.1.5"
futures = "0.1.27"
handlebars = "1.1.0"
indicatif = "0.11.0"
lazy_static = "1.3.0"
nom = "4.2.3"
regex = "1.1.6"
serde = { version = "1.0.91", features = ['derive'] }
serde_json = "1.0.39"
term_size = "0.3.1"
time = "0.1.42"
tokio = "0.1.20"
tokio-process = "0.2.3"
tokio-serial = "3.2.0"
toml = "0.5.1"
url = "1.7.2"
which = "2.0.1"
zip = "0.5.2"
termcolor = "1.0.4"
tokio-signal = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-socketcan = "0.1.3"

[dev-dependencies]
rand = "0.6.5"
tempdir = "0.3.7"

[features]
default = []
