[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
categories = [
    "command-line-utilities",
    "development-tools",
]
description = "A adb logcat wrapper and log processor"
homepage = "https://github.com/flxo/rogcat"
keywords = [
    "android",
    "adb",
    "debugging",
    "log",
    "logcat",
]
license = "MIT"
name = "rogcat"
readme = "README.md"
repository = "https://github.com/flxo/rogcat"
version = "0.5.0-alpha.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "signal", "io-util", "process"] }
anyhow = "1"
clap = { version = "3", features = ["derive"] }
termcolor = "1"
regex = "1"
chrono = "0.4.19"
term_size = "0.3.2"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
